# m3u8

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  runtests  setup.py
.github/workflows/: main.yml  wheels.yml
m3u8/: __init__.py  _m3u8_parser.c  model.py  parser.py  protocol.py
tests/: m3u8server.py  playlists.py  test_c_extension_parity.py  test_model.py  test_parser.py
