[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3u8"
version = "6.3.0"
description = "Python m3u8 parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Globo.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "backports-datetime-fromisoformat; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/openwurl/m3u8"
Repository = "https://github.com/openwurl/m3u8"

[project.optional-dependencies]
dev = [
    "bottle",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["m3u8"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.c"]

[tool.cibuildwheel]
# Build only cp310 - the abi3 wheel (from py_limited_api=True in setup.py)
# works for all Python 3.10+ versions
build = "cp310-*"
# Skip 32-bit and musllinux
skip = "*-win32 *-manylinux_i686 *musllinux*"
# Archs are specified per-runner in the GitHub Actions workflow

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
